buildscript {
    repositories { mavenCentral() }
}

plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    /* Apache */
    api 'commons-codec:commons-codec:1.15'
	api 'commons-io:commons-io:2.11.0'

	/* Other */
	api 'com.google.code.gson:gson:2.8.8'
	api 'com.github.crykn:kryonet:2.22.8'
	api 'com.esotericsoftware:kryo:5.4.1-SNAPSHOT'
	
	/* Mail */
	api 'com.sun.mail:javax.mail:1.6.2'
	api 'com.sun.mail:smtp:1.6.2'
	api 'com.sun.mail:pop3:1.6.2'
	api 'com.sun.mail:imap:1.6.2'
	
    /* Discord */
	api 'net.dv8tion:JDA:5.0.0-beta.15'
    api 'ch.qos.logback:logback-classic:1.4.8'

	/* Sqlite jdbc */
	api group: 'org.xerial', name: 'sqlite-jdbc', version: '3.42.0.0'

    /* --------------------- */

	/* Shadow Apache */
    shadow 'commons-codec:commons-codec:1.15'
	shadow 'commons-io:commons-io:2.11.0'

	/* Shadow Other */
	shadow 'com.google.code.gson:gson:2.8.8'
	shadow 'com.github.crykn:kryonet:2.22.8'
	shadow 'com.esotericsoftware:kryo:5.4.1-SNAPSHOT'
	
	/* Shadow Mail */
	shadow 'com.sun.mail:javax.mail:1.6.2'
	shadow 'com.sun.mail:smtp:1.6.2'
	shadow 'com.sun.mail:pop3:1.6.2'
	shadow 'com.sun.mail:imap:1.6.2'

    /* Discord */
	shadow 'net.dv8tion:JDA:5.0.0-beta.15'
    shadow 'ch.qos.logback:logback-classic:1.4.8'

    /* Sqlite jdbc */
    shadow group: 'org.xerial', name: 'sqlite-jdbc', version: '3.42.0.0'
}

tasks.withType(JavaCompile).configureEach { it.options.release = 17 }

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17

version = '1.0.0'
archivesBaseName = 'photon'

/* Generate JAR */
jar {
	duplicatesStrategy 'exclude'
   	manifest {
        attributes([ "Main-Class": "com.photon.network.NetworkEngine" ])
    }
}

/* Add all dependcies to the jar */
shadowJar {
	minimize();
   	configurations = [project.configurations.shadow]
   	// duplicatesStrategy 'exclude'
	exclude 'natives/**', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
	archiveFileName = "network.jar"
	archiveClassifier.set('')
}

task apiJar(type: Jar) {
   	dependsOn shadowJar
    from zipTree(shadowJar.outputs.files.singleFile)
    exclude 'sqlite-jbdc.properties', 'logo.png', 'natives/**', 'lang/**', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 
        'net/**', 'ch/**', 'com/sun/mail/**', 'javax/mail/**', 'tomp2p/**', 'club/**', 'org/sqlite/**',
        'com/photon/discord/**', 'com/photon/network/NetworkEngine', 'com/photon/ui/**'
    archiveFileName = "api.jar"
    manifest {
        attributes([ "Main-Class": "com.photon.network.NetworkEngine" ])
    }
}

tasks.build.dependsOn shadowJar, apiJar